Added default image

--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,13 @@ $(function () {
 		<div class="events-item">
 			<div class="events-thumbnail-wrapper">
 				<a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}">
-					<div class="events-thumbnail"{% if loop_value->thumbnail != '' %} style="background-image: url({{loop_value->thumbnail}})"{% end %}></div>
+					<div class="events-thumbnail"
+						{% if loop_value->thumbnail != '' %}
+							style="background-image: url({{loop_value->thumbnail}})"
+						{% else %}
+							style="background-image: url(/apps/events/css/default.jpg)"
+						{% end %}
+					></div>
 				</a>
 			</div>
 			<div class="events-item-info">
