--- a/css/events.css
+++ b/css/events.css
@@ -32,6 +32,9 @@
 .events-item h4 {
 	padding: 5px 10px 0px 10px;
 	margin: 0;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 .events-item p {
 	padding: 0px 10px 5px 10px;
