--- a/css/events.css
+++ b/css/events.css
@@ -44,7 +44,8 @@
 	padding: 0px 10px 5px 10px;
 	margin: 0;
 }
-a.events-item-link {
+a.events-item-link,
+a#event-registration-link {
 	display: block;
 	background-color: #444;
 	color: #fff;
@@ -53,7 +54,11 @@ a.events-item-link {
 	text-transform: uppercase;
 	text-decoration: none;
 }
-a.events-item-link:hover {
+a.events-item-link:hover,
+a#event-registration-link:hover {
 	background-color: #333;
 	text-decoration: none;
+}
+.events-summary>div:first-child {
+	padding-left: 0;
 }
