--- a/css/events.css
+++ b/css/events.css
@@ -67,6 +67,9 @@ a.events-item-link:hover {
 	padding: 10px;
 	background-color: #f5f5f5;
 }
+#show-map .fa-map-marker {
+	font-size: 1.3em;
+}
 a#event-registration-link {
 	position: absolute;
 	bottom: 0;
