--- a/views/event.html
+++ b/views/event.html
@@ -1,4 +1,5 @@
 {! admin/util/dates !}
+{! admin/util/fontawesome !}
 
 <p>
 	<a href="/events">&laquo; {"All Events"}</a>
@@ -43,7 +44,7 @@
 <p class="events-address"><strong>{"Where"}:</strong>
 {% if venue != '' %}{{venue}}<br />{% end %}
 {{ address }}
-{% if city != '' %}<br />{{ city }}{% end %} (<a href="#" onclick="return events_toggle_map (this)">{"show map"}</a>)<br />
+{% if city != '' %}<br />{{ city }}{% end %} <button id="show-map"><i class="fa fa-map-marker"></i> <span>{"show map"}</span></button><br />
 {% end %}
 
 <p class="events-contact"><strong>{"Contact"}:</strong>
@@ -116,10 +117,15 @@
 {% end %}
 
 var events_toggle_map_status = false;
-function events_toggle_map (link) {
+function events_toggle_map (e) {
+	e.preventDefault ();
+
+	var link = $('#show-map'),
+		span = link.children ('span:first');
+
 	if (! events_toggle_map_status) {
 		events_toggle_map_status = true;
-		$(link).html ('{"hide map"}');
+		$(span).html ('{"hide map"}');
 		$('#event-map').slideDown (function () {
 			// resize and adjust the position of the map
 			for (var m = 0; m < my_maps.length; m++) {
@@ -135,10 +141,13 @@ function events_toggle_map (link) {
 		});
 	} else {
 		events_toggle_map_status = false;
-		$(link).html ('{"show map"}');
+		$(span).html ('{"show map"}');
 		$('#event-map').slideUp ();
 	}
 	return false;
 }
 
+$(function () {
+	$('#show-map').on ('click', events_toggle_map);
+});
 </script>
