Admin can add guests manually

--- a/views/guests.html
+++ b/views/guests.html
@@ -1,6 +1,8 @@
 <p>
 	<a href="/events/admin">&laquo; {"Back"}</a>
 	&nbsp;|&nbsp;
+	<a href="/events/guests/add?id={{id}}">{"Add Guest"}</a>
+	&nbsp;|&nbsp;
 	<a href="/events/guests/export?id={{id}}">{"Export"}</a>
 </p>
 
