--- a/views/admin.html
+++ b/views/admin.html
@@ -1,6 +1,8 @@
 <p>
 	<a href="/events/add">{"Add Event"}</a>
 	&nbsp;|&nbsp;
+	<a href="/events/import">{"Import Events"}</a>
+	&nbsp;|&nbsp;
 	<a href="/events/categories">{"Categories"}</a>
 	{% if User::require_acl ('settings') %}
 	&nbsp;|&nbsp;
