--- a/views/admin.html
+++ b/views/admin.html
@@ -12,8 +12,14 @@
 	<a href="/events">{"View Listings"}</a>
 </p>
 
-{% if offset > 0 %}
-<p class="previous"><a href="/events/admin?offset={{ prev }}">&laquo; {"Previous"}</a></p>
+<p style="float: left">
+{! navigation/pager?style=results&url=[url]&total=[total]&count=[count]&limit=[limit] !}
+</p>
+
+{% if total > $data->limit %}
+<div style="float: right">
+{! navigation/pager?style=numbers&url=[url]&total=[total]&count=[count]&limit=[limit] !}
+</div>
 {% end %}
 
 <p>
@@ -51,6 +57,6 @@
 </table>
 </p>
 
-{% if more %}
-<p class="next"><a href="/events/admin?offset={{ next }}">{"Next"} &raquo;</a></p>
+{% if total > $data->limit %}
+{! navigation/pager?style=numbers&url=[url]&total=[total]&count=[count]&limit=[limit] !}
 {% end %}
