--- a/views/event.html
+++ b/views/event.html
@@ -24,7 +24,7 @@
 		<div class="events-thumbnail-wrapper">
 			<div class="events-thumbnail"
 				{% if thumbnail != '' %}
-					style="background-image: url({{thumbnail}})"
+					style="background-image: url('{{thumbnail}}')"
 				{% else %}
 					style="background-image: url(/apps/events/css/default.jpg)"
 				{% end %}
