Fixed issue with spaces in thumbnail names

--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@ $(function () {
 				<a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}">
 					<div class="events-thumbnail"
 						{% if loop_value->thumbnail != '' %}
-							style="background-image: url({{loop_value->thumbnail}})"
+							style="background-image: url('{{loop_value->thumbnail}}')"
 						{% else %}
 							style="background-image: url(/apps/events/css/default.jpg)"
 						{% end %}
