--- a/views/add.html
+++ b/views/add.html
@@ -11,7 +11,13 @@
 
 <div id="thumbnail-div">
 	{"Thumbnail"}:<br />
-	<img src="{% if thumbnail == '' %}//:0{% else %}{{thumbnail|quotes}}{% end %}" id="thumbnail-preview" /><br />
+	<div class="thumbnail-wrapper">
+		<div class="thumbnail" id="thumbnail-preview"
+		{% if thumbnail !== '' %}
+			style="background-image: url({{thumbnail|urlencode}}')"
+		{% end %}
+		></div>
+	</div>
 	<input type="hidden" name="thumbnail" id="thumbnail" size="40" value="{{ thumbnail|quotes }}" />
 	<input type="submit" id="thumbnail-browse" value="{"Choose"}" />
 </div>
@@ -178,10 +184,26 @@
 	right: 0;
 	width: 150px;
 }
-#thumbnail-preview {
-	width: 150px;
-	height: 100px;
+.thumbnail-wrapper {
+	background-color: #ccc;
+	position: relative;
+	margin: 0;
+	padding: 0;
+	padding-bottom: 66%;
+	width: 100%;
+	height: 0;
 	margin-bottom: 5px;
+}
+.thumbnail,
+.thumbnail-preview {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url(/apps/blog/css/default.jpg);
+	background-position: 50% 50%;
+	background-size: cover;
 }
 </style>
 
@@ -195,7 +217,7 @@ $(function () {
 			title: "{"Choose an image"}",
 			thumbs: true,
 			callback: function (file) {
-				$('#thumbnail-preview').attr ('src', file);
+				$('#thumbnail-preview').css ('background-image', 'url(\'' + encodeURI (file) + '\')');
 			}
 		});
 	});
