Fixed z-index of date picker over wysiwyg editor

--- a/views/add.html
+++ b/views/add.html
@@ -204,6 +204,9 @@
 	background-position: 50% 50%;
 	background-size: cover;
 }
+
+.ui-datepicker { z-index: 9999 !important; }
+.ui-timepicker { z-index: 9999 !important; }
 </style>
 
 <script type="text/javascript">
