--- a/views/register.html
+++ b/views/register.html
@@ -6,7 +6,12 @@
 
 <p class="event-price">
 	{% if price > 0 %}
-		{"Price"}: ${{price|number_format (%s, 2)}}/{"guest"}
+		{"Price"}:
+		{% if discount_price !== $data->price %}
+			<strike>${{price|number_format (%s, 2)}}</strike> ${{discount_price|number_format (%s, 2)}}/{"guest"}
+		{% else %}
+			${{price|number_format (%s, 2)}}/{"guest"}
+		{% end %}
 	{% else %}
 		{"Price"}: {"Free!"}
 	{% end %}
@@ -38,6 +43,15 @@
 		<span id="event-attendee-inputs"></span>
 	</p>
 
+	{% if allow_invoice %}
+		<p>
+			<label>
+				<input type="checkbox" id="invoice" value="1" />
+				{"Request an invoice to pay offline."}
+			</label>
+		</p>
+	{% end %}
+
 	<p class="event-clear">
 		<button id="event-submit">{"Continue"}</button>
 	</p>
@@ -56,7 +70,7 @@ $(function () {
 		timer: '#event-timer',
 		event_id: {{id}},
 		remaining: {{remaining}},
-		price: {{price * 100}},
+		price: {{discount_price * 100}},
 		reservation_id: {{reservation_id}},
 		num_attendees: {{num_attendees}},
 		company: "{{company}}",
