--- a/views/past.html
+++ b/views/past.html
@@ -9,16 +9,11 @@ $(function () {
 });
 </script>
 
-{% if count($data->events) === 0 %}
-<p>{"We have no upcoming events at this time. Please check back soon."}</p>
-<p><a href="/events/past">{"You can explore our past events here."}</a></p>
-{% else %}
-
 <div class="events-header e-row-variable">
 	<div class="e-col-50 e-no-padding">
-		<a href="/events/calendar{% if category %}/category/{{category}}/{{categories[$data->category]|URLify::filter}}{% end %}">{"View Calendar"}</a>
+		<a href="/events">{"Upcoming Events"}</a>
 		&nbsp;|&nbsp;
-		<a href="/events/past">{"Past Events"}</a>
+		<a href="/events/calendar{% if category %}/category/{{category}}/{{categories[$data->category]|URLify::filter}}{% end %}">{"View Calendar"}</a>
 		{% if User::require_acl ('admin', 'admin/add', 'events') %}
 			&nbsp;|&nbsp;
 			<a href="/events/add">{"Add Event"}</a>
@@ -54,12 +49,10 @@ $(function () {
 			</div>
 			<div class="events-item-info">
 				<h4><a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}" title="{{loop_value->title}}">{{ loop_value->title }}</a></h4>
-				<p class="events-item-date">{{ loop_value->start_date|events\Filter::shortdate }}{% if loop_value->end_date != '' && $data->loop_value->end_date != $data->loop_value->start_date %}-{{ loop_value->end_date|events\Filter::shortdate }}{% end %}</p>
+				<p class="events-item-date">{{ loop_value->start_date|events\Filter::shortdateyear }}{% if loop_value->end_date != '' && $data->loop_value->end_date != $data->loop_value->start_date %}-{{ loop_value->end_date|events\Filter::shortdate }}{% end %}</p>
 			</div>
 			<a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}" class="events-item-link">{"Details"}</a>
 		</div>
 	</div>
 {% end %}
 </div>
-
-{% end %}
