--- a/views/past.html
+++ b/views/past.html
@@ -21,7 +21,7 @@ $(function () {
 	</div>
 	<div class="e-col-50 e-no-padding" style="text-align: right; padding-right: 10px">
 		<select id="events-category">
-			<option value="/events">{"All Categories"}</option>
+			<option value="/events/past">{"All Categories"}</option>
 			{% foreach categories as _category, _name %}
 			<option
 				value="/events/past/category/{{_category}}/{{_name|URLify::filter}}"
