Added message registrants option to guest lists

--- a/views/guests.html
+++ b/views/guests.html
@@ -3,6 +3,8 @@
 	&nbsp;|&nbsp;
 	<a href="/events/guests/add?id={{id}}">{"Add Guest"}</a>
 	&nbsp;|&nbsp;
+	<a href="/events/guests/message?id={{id}}">{"Message Registrants"}</a>
+	&nbsp;|&nbsp;
 	<a href="/events/guests/export?id={{id}}">{"Export"}</a>
 </p>
 
