--- a/views/rss.html
+++ b/views/rss.html
@@ -6,11 +6,11 @@
 	xmlns="http://purl.org/rss/1.0/"
 >
 
-<channel rdf:about="http://{{ $_SERVER.HTTP_HOST }}/events">
+<channel rdf:about="http://{{ Appconf::admin ('Site Settings', 'site_domain') }}/events">
 
 	<title>{{ title }}</title>
-	<link>http://{{ $_SERVER.HTTP_HOST }}/events</link>
-	<description>{{ $_SERVER.HTTP_HOST }} {"events calendar"}.</description>
+	<link>http://{{ Appconf::admin ('Site Settings', 'site_domain') }}/events</link>
+	<description>{{ Appconf::admin ('Site Settings', 'site_domain') }} {"events calendar"}.</description>
 
 	<dc:language>{{ i18n.language }}</dc:language>
 	<dc:date>{{ date }}</dc:date>
@@ -18,7 +18,7 @@
 	<items>
 		<rdf:Seq>
 {% foreach events %}
-			<rdf:li rdf:resource="http://{{ $_SERVER.HTTP_HOST }}{{ loop_value->url }}" />
+			<rdf:li rdf:resource="http://{{ Appconf::admin ('Site Settings', 'site_domain') }}{{ loop_value->url }}" />
 {% end %}
 		</rdf:Seq>
 	</items>
@@ -26,9 +26,9 @@
 </channel>
 
 {% foreach events %}
-<item rdf:about="http://{{ $_SERVER.HTTP_HOST }}{{ loop_value->url }}">
+<item rdf:about="http://{{ Appconf::admin ('Site Settings', 'site_domain') }}{{ loop_value->url }}">
 	<title>{{ loop_value->title }}</title>
-	<link>http://{{ $_SERVER.HTTP_HOST }}{{ loop_value->url }}</link>
+	<link>http://{{ Appconf::admin ('Site Settings', 'site_domain') }}{{ loop_value->url }}</link>
 	<description>{{ loop_value->body }}</description>
 	<dc:date>{{ loop_value->start_date }}T{{ loop_value->starts }}</dc:date>
 </item>
