Guest company name editable in guest list update form

--- a/views/guests/edit.html
+++ b/views/guests/edit.html
@@ -9,8 +9,8 @@
 </ul>
 
 <p>
-	<b>{"Company"}:</b>
-	{{company}}
+	{"Company"}:<br />
+	<input type="text" name="company" size="40" value="{{company}}" />
 </p>
 
 <p>
